--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+
+  <!-- SEO Meta Tags -->
+  <title>SAFAR – Your Mindful Study & Wellness Companion</title>
+  <meta name="description" content="SAFAR helps you build better study habits, track your mood, journal your thoughts, meditate, and stay focused – all in one place." />
+  <meta name="keywords" content="study, focus timer, meditation, journal, mood tracker, wellness, mental health, productivity, SAFAR" />
+  <meta name="author" content="SAFAR" />
+  <link rel="canonical" href="https://safar.parmarssc.in/" />
+
+  <!-- Open Graph / Social -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://safar.parmarssc.in/" />
+  <meta property="og:title" content="SAFAR – Your Mindful Study & Wellness Companion" />
+  <meta property="og:description" content="Build better study habits, track your mood, journal your thoughts, meditate, and stay focused – all in one place." />
+  <meta property="og:site_name" content="SAFAR" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="SAFAR – Your Mindful Study & Wellness Companion" />
+  <meta name="twitter:description" content="Build better study habits, track your mood, journal your thoughts, meditate, and stay focused – all in one place." />
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
-  <title>SAFAR</title>
 </head>
 
 <body>
