--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta name="theme-color" content="#0B0F19" media="(prefers-color-scheme: dark)" />
+  <meta name="theme-color" content="#F8FAFC" media="(prefers-color-scheme: light)" />
 
   <!-- SEO Meta Tags -->
   <title>SAFAR – Your Mindful Study & Wellness Companion</title>
-  <meta name="description" content="SAFAR helps you build better study habits, track your mood, journal your thoughts, meditate, and stay focused – all in one place." />
-  <meta name="keywords" content="study, focus timer, meditation, journal, mood tracker, wellness, mental health, productivity, SAFAR" />
+  <meta name="description"
+    content="SAFAR helps you build better study habits, track your mood, journal your thoughts, meditate, and stay focused – all in one place." />
+  <meta name="keywords"
+    content="study, focus timer, meditation, journal, mood tracker, wellness, mental health, productivity, SAFAR" />
   <meta name="author" content="SAFAR" />
   <link rel="canonical" href="https://safar.parmarssc.in/" />
 
@@ -16,13 +20,19 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://safar.parmarssc.in/" />
   <meta property="og:title" content="SAFAR – Your Mindful Study & Wellness Companion" />
-  <meta property="og:description" content="Build better study habits, track your mood, journal your thoughts, meditate, and stay focused – all in one place." />
+  <meta property="og:description"
+    content="Build better study habits, track your mood, journal your thoughts, meditate, and stay focused – all in one place." />
   <meta property="og:site_name" content="SAFAR" />
+  <meta property="og:image" content="https://safar.parmarssc.in/og-banner.jpg" />
+  <meta property="og:image:width" content="1024" />
+  <meta property="og:image:height" content="576" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="SAFAR – Your Mindful Study & Wellness Companion" />
-  <meta name="twitter:description" content="Build better study habits, track your mood, journal your thoughts, meditate, and stay focused – all in one place." />
+  <meta name="twitter:description"
+    content="Build better study habits, track your mood, journal your thoughts, meditate, and stay focused – all in one place." />
+  <meta name="twitter:image" content="https://safar.parmarssc.in/og-banner.jpg" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
